# streeteatz_be

./: Procfile  README.md  build.sh  data.json  manage.py  pull_request_template.md  pyproject.toml  pytest.ini  render.yaml  requirements.txt
streeteatz/: admin.py  apps.py  models.py  serializers.py  test_vendors_api.py  tests.py  views.py
streeteatz/fixtures/: seed_data.py  vendor_seed_data.json
streeteatz/migrations/: 0001_initial.py  0002_vendor_down_rating_vendor_up_rating.py  0003_vendor_distancefromuser_alter_vendor_name_and_more.py  0004_item.py  0005_alter_vendor_wait_time.py
streeteatz_be/: asgi.py  pytest.ini  settings.py  test_vendors_api.py  urls.py  wsgi.py
