[tool.poetry]
name = "streeteatz-be"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "streeteatz_be"}]

[tool.poetry.dependencies]
python = "^3.7"
django = "^4.2.3"
psycopg2 = "^2.9.6"
djangorestframework = "^3.14.0"
dj-database-url = "^2.0.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
